# d0ugal

./: Dockerfile  README.md  README.md.j2  pyproject.toml  render.sh  render_readme.py  renovate.json5
.github/workflows/: lint.yml  update-readme.yml
