[project]
name = "d0ugal-readme-renderer"
version = "0.1.0"
description = "Dynamic README renderer for GitHub profile"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length is enforced by the formatter
    "RUF012", # mutable class attributes are idiomatic in HA entities
]

[tool.ruff.format]
quote-style = "double"

